# cpp-master

./: .gitignore  LICENSE  README.md
stackmath/: CMakeLists.txt  README.md
stackmath/examples/: trigo-formula.sm
stackmath/src/: Executor.cc  Executor.h  Lexer.cc  Lexer.h  LexerException.h  opcodes.cc  opcodes.h  stackmath.cc  trim.h
